<resources>
    <string name="app_name">Project</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_workshop">Workshop</string>
    <string name="title_profile">Profile</string>
    <string name="workshop_contentDescription">workshop image</string>

    <!-- Profile Fragment -->
    <string name="signup">SIGN UP</string>
    <string name="text_log_in_profile_fragment">Log In</string>
    <string name="text_already_have_a_account">Already have a account ?</string>
    <string name="dummy_email_id">abc@gamil.com</string>
    <string name="dummy_phone_number">98XXXXX992</string>
    <string name="text_guest">Guest</string>
    <string name="you_logged_in_as_a_guest">You logged in as a Guest.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Please wait ..</string>
    <string name="sign_up_description_text">Enter your name , email, phone and password to register with us.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Mobile no.</string>
    <string name="password">password</string>
    <string name="log_in">LOG IN</string>
    <string name="log_in_description_text">Enter your name and email to log in.</string>
    <string name="no_workshop_available_please_try_again_after_some_time">No workshop available! Please try again after some time</string>
    <string name="apply">Apply</string>
    <string name="dummy_description">This workshop is all about awareness about future engineers.This workshop tell you about all the important details you need to know about your future. This workshop last approximately 2 to 3 hours on 10 August 2021.</string>
    <string name="log_out_text">Log out</string>
    <string name="text_no_workshop_applied_yet_applied_workshop_pop_up_here">No workshop applied yet! Applied workshop pop up here.</string>
    <string name="apply_workshop">Apply for workshop</string>
    <string name="already_applied">Already Applied</string>
    <string name="title_login">Login</string>
    <string name="title_signup">SignUp</string>
    <string name="title_available_workshops">Available workshops</string>
</resources>