<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="2dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_workshop_image"
                android:contentDescription="@string/workshop_contentDescription"
                android:scaleType="fitCenter"
                />
            <TextView
                android:id="@+id/tv_logged_in_guest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/you_logged_in_as_a_guest"
                android:textSize="@dimen/btn_text_size"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:background="#ebebeb"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_guest"
                android:textSize="@dimen/user_name_text_size"
                android:layout_marginTop="@dimen/user_name_margin_top"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_user_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dummy_phone_number"
                android:textSize="@dimen/phone_email_text_size"
                android:layout_marginTop="@dimen/phone_email_margin_top"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dummy_email_id"
                android:textSize="@dimen/phone_email_text_size"
                android:layout_marginTop="@dimen/phone_email_margin_top"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/btn_marginStartEnd"
                android:layout_marginTop="@dimen/sign_up_btn_marginTop"
                android:layout_marginEnd="@dimen/btn_marginStartEnd"
                android:background="@drawable/shape_button_rounded"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_paddingTopBottom"
                android:paddingBottom="@dimen/btn_paddingTopBottom"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_text_size"
                app:backgroundTint="@null"
                tools:targetApi="m"
                tools:ignore="UnusedAttribute" />

            <LinearLayout
                android:id="@+id/ll_have_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_already_have_a_account"
                    android:textSize="@dimen/btn_text_size"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/tv_log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/text_log_in_profile_fragment"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>